# lvgl-demo

./: .gitignore  CMakeLists.txt  README.md  SCREENSHOT_INFO.md  lv_conf.h  lv_drv_conf.h
_codeql_build_dir/: CMakeCache.txt  Makefile  cmake_install.cmake
_codeql_build_dir/lvgl/: Makefile  cmake_install.cmake
src/: dashboard.c  dashboard.h  ha_api.c  ha_api.h  light_control.c  light_control.h  main.c
